<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/miActionBar"
        android:background="@color/colorDiverColor"
        android:id="@+id/rlSubEncabezado">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/z_page"
            android:id="@+id/ivIconChapSubHead"
            android:layout_alignTop="@+id/idTariffheading"
            android:layout_toLeftOf="@+id/tariffSubheadingCode"
            android:layout_toStartOf="@+id/tariffSubheadingCode"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSubheading"
            android:text="@string/idSubheading"
            android:layout_marginTop="10dp"
            style="@style/styleChapitulo"
            android:textSize="18dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTariffheading"
            android:text="@string/id_heading"
            android:visibility="invisible"
            android:textSize="@dimen/text_chapters"
            android:layout_alignBottom="@+id/tvSubheading"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tariffSubheadingCode"
            android:text=""
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            style="@style/styleChapituloCode"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/tvSubheading"
            android:layout_alignStart="@+id/tvSubheading"
            android:layout_marginLeft="84dp"
            android:layout_marginStart="84dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:id="@+id/scrollView2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="22dp"
            android:layout_below="@+id/idTariffheading">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tariffSuheadingDescription"
                android:text="@string/subheadingDescr"
                style="@style/styleChapterDescr"
                android:layout_marginRight="10dp"
                android:layout_alignTop="@+id/scrollView2" />

        </ScrollView>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSubheadings"
        android:text="@string/subheadings"
        android:textStyle="bold"
        android:textSize="@dimen/text_chapters"
        style="@style/styleChapituloCode"
        android:layout_below="@+id/rlSubEncabezado"
        android:paddingLeft="@dimen/activity_vertical_margin"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSubheadings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvSubheadings"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:paddingTop="@dimen/padding_top">
    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>
